# qextrai

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 202607200001_create_field_definitions.sql  202607200002_create_document_templates.sql  202607210001_create_document_values.sql
src-tauri/src/: lib.rs  main.rs  pdf_extraction.rs
src-tauri/src/database/: commands.rs  connection_manager.rs  document_templates.rs  document_values.rs  dpapi.rs  field_catalog.rs  mod.rs  models.rs  postgres_service.rs  storage.rs  validation.rs
src/app/: App.tsx  documentTypes.ts
src/components/: AppHeader.tsx  Brand.tsx  DatabaseSettingsSection.tsx  StatusBadge.tsx  UnsavedFieldDialog.tsx  UnsavedLayoutDialog.tsx
src/domain/: databaseSettings.test.ts  databaseSettings.ts  documentFieldList.test.ts  documentFieldList.ts  documentFieldValues.test.ts  documentFieldValues.ts  documentFields.test.ts  documentFields.ts  documentFingerprint.test.ts  documentFingerprint.ts  documentTemplateRepository.ts  documentTemplates.test.ts  documentTemplates.ts  documentTextExtractionService.test.ts  documentTextExtractionService.ts  documentValuesRepository.test.ts  documentValuesRepository.ts  documentValuesWorkflow.test.ts  documentValuesWorkflow.ts  draftRegions.test.ts  draftRegions.ts  fieldCatalog.test.ts  fieldCatalog.ts  fieldCatalogRepository.test.ts  fieldCatalogRepository.ts  fieldDeletionGuard.test.ts  (+8 more)
(+24 files in other folders)
