[package]
name = "qextrai"
version = "0.1.0"
description = "qExtrai desktop application"
authors = ["qExtrai"]
edition = "2021"

[lib]
name = "qextrai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio",
  "tls-native-tls",
  "postgres",
  "migrate",
  "macros",
] }
tokio = { version = "1", features = ["time"] }
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Security_Cryptography",
  "Win32_Storage_FileSystem",
  "Win32_System_Memory",
] }

[dev-dependencies]
tempfile = "3"
